--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,8 @@ name: Hello World Training Workflow
 
 on:
   workflow_dispatch:
-    # Permite lanzar o workflow manualmente desde a interface de GitHub
   issues:
     types: [opened, edited]
-    # Lanza o workflow cando se crea ou edita unha "issue"
-
 jobs:
   greet:
     env:
@@ -18,30 +15,4 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo "Hello $MY_ENV"
-          echo "Hello $GITHUB_ACTOR"
-name: Hello World Training Workflow
-on:
-workflow_dispatch:
-jobs:
-greet:
-runs-on: ubuntu-latest
-steps:
-- name: Greet the User
-run: echo "Hello World!"
-name: Hello World Training Workflow
-on:
-workflow_dispatch:
-issues:
-types: [opened, edited]
-jobs:
-greet:
-env:
-MY_ENV: "John Doe"
-runs-on: ubuntu-latest
-steps:
-- name: Greet the User
-run: echo "Hello World!"
-- name: Run a multi-line script
-run: |
-echo "Hello $MY_ENV"
-echo "Hello $GITHUB_ACTOR"
+          echo "Hello $GITHUB_ACTOR
